--- a/vanilla.html
+++ b/vanilla.html
@@ -11,15 +11,15 @@
     <button id="btn">click me</button>
     <script>
       let count = 0;
-      const counter = document.querySelector("span");
-      const button = document.querySelector("#btn");
+      const counter = document.querySelector('span');
+      const button = document.querySelector('#btn');
 
       function clickHandler() {
         count += 1;
         counter.innerText = `total click: ${count}`;
       }
-
-      button.addEventListener("click", clickHandler);
+      a;
+      button.addEventListener('click', clickHandler);
     </script>
   </body>
 </html>
