--- a/vanilla.html
+++ b/vanilla.html
@@ -18,7 +18,7 @@
         count += 1;
         counter.innerText = `total click: ${count}`;
       }
-      aaa;
+      aaaaa;
       button.addEventListener('click', clickHandler);
     </script>
   </body>
